Revised and refactored
